# manpwin

./: .gitattributes  .gitignore  AniInvert.cpp  AniJulia.cpp  Apollonius.cpp  Approximation.cpp  Approximation.h  ApproximationExp.cpp  Arithmetic.cpp  Arithmetic.h  Bif.cpp  Bif.h  Big.h  BigComplex.cpp  BigComplex.h  BigDouble.cpp  BigDouble.h  BigFN.cpp  BigFunctions.cpp  BigMandelDerivatives.cpp  BigMatrix.cpp  BigMatrix.h  BigNumStuff.cpp  BigPixel.cpp  BigTZ.cpp  BigTrig.cpp  BigTrig.h  Bt.cpp  BuddhaBrot.cpp  CMakeLists.txt  CalcMode.cpp  CalcMode.h  Circle.cpp  Clipbord.cpp  Colour.cpp  Colour1.cpp  ColourMethod.cpp  Complex.h  Config.cpp  Cross.cpp  (+172 more)
Docs/: ManpWIN_vcpkg_Strategy.md  vcpkg_versions_2026-03-01.txt
HTMLHelp/: HelpContents.docx  ManpWIN.chm  ManpWIN.chw  ManpWIN.hhp  Manpwin.hhc  manphelp.hhk
HTMLHelp/html/: manp4c6w.htm  manp7ani.htm  manp7col.htm  manp7for.htm  manp7fra.htm  manp7hgw.htm  manp7mar.htm  manp7opt.htm  manp7osc.htm  manp7pal.htm  manp7pre.htm  manp7qy8.htm  manp7r00.htm  manp7r1s.htm  manp7r3k.htm  manp7r5c.htm  manp7r74.htm  manp7r8w.htm  manp7sfk.htm  manp7sog.htm  manp7vlc.htm  manp7vn4.htm  manp7vow.htm  manp7vzk.htm  manp7vzm.htm  manp7vzp.htm  manp7w1c.htm  manp7w1d.htm  manp7w1e.htm  manp7w1f.htm  manp7w1h.htm  manp7yr4.htm  manp7yuo.htm  manp8els.htm  manp9s8g.htm  manphail.htm
HTMLHelp/html/manp4c6w_files/: filelist.xml
HTMLHelp/html/manp7ani_files/: filelist.xml
HTMLHelp/html/manp7col_files/: filelist.xml
HTMLHelp/html/manp7for_files/: filelist.xml
HTMLHelp/html/manp7fra_files/: filelist.xml
HTMLHelp/html/manp7hgw_files/: filelist.xml
HTMLHelp/html/manp7mar_files/: filelist.xml
HTMLHelp/html/manp7osc_files/: filelist.xml
HTMLHelp/html/manp7vow_files/: filelist.xml
HTMLHelp/html/manp7vzk_files/: filelist.xml
HTMLHelp/html/manp7w1c_files/: filelist.xml
HTMLHelp/html/manp7w1d_files/: filelist.xml
HTMLHelp/html/manp7w1f_files/: filelist.xml
HTMLHelp/html/manp7yr4_files/: filelist.xml
HTMLHelp/html/manp7yuo_files/: filelist.xml
MPEG/: CMakeLists.txt  conform.cpp  fdctref.cpp  global.h  idct.cpp  motion.cpp  mpeg.sln  mpeg.vcproj  mpeg.vcxproj  mpeg2enc.cpp  mpeg2enc.h  predict.cpp  putbits.cpp  puthdr.cpp  putmpg.cpp  putpic.cpp  putseq.cpp  putvlc.cpp  quantize.cpp  ratectl.cpp  readpic.cpp  stats.cpp  transfrm.cpp  writepic.cpp
ManpWIN64/: AniInvert.cpp  AniJulia.cpp  Apollonius.cpp  Approximation.cpp  Approximation.h  ApproximationExp.cpp  Arithmetic.cpp  Arithmetic.h  BailoutTemplate.h  Bif.cpp  Big.h  BigComplex.cpp  BigComplex.h  BigDouble.cpp  BigDouble.h  BigFlarium.cpp  BigFractintFunctions.cpp  BigFunctions.cpp  BigManDerivative.cpp  BigManDerivatives.cpp  BigMandelDerivatives.cpp  BigNumStuff.cppOld  BigPixel.cpp  BigTZ.cpp  BigTrig.cpp  BigTrig.h  Bt.cpp  BuddhaBrot.cpp  CMakeLists.txt  CalcMode.cpp  CalcMode.h  ChuaFlight.cpp  Circle.cpp  Clipbord.cpp  Code Differences.xlsx  CodeVersion.h  Colour.cpp  Colour1.cpp  Complex.cpp  Config.cpp  (+187 more)
Setup/: ManpWin64.iss
Setup/InstallerFiles/: FILE_ID.DIZ  MANPHELP.hlp  MANPHelp.cnt  Manp.sci  ManpWIN.INI  ManpWIN.chm  README.TXT  Sunshine.COL  WARNING.TXT  matin01.PAR
ZLib/: CMakeLists.txt  ZLib.vcproj  ZLib.vcxproj  deflate.c  trees.c  zutil.c
parser/: CMakeLists.txt  DDTrigFn.cpp  ParserCtx.cpp  ParserCtx.h  ParserFn.cpp  QDTrigFn.cpp  TrigFn.cpp  TrigFn.h  addstuff.cpp  cmplx.h  externs.h  fpu087.cpp  fractint.h  mpmath.h  parser.cpp  parser.h  parser.vcproj  parser.vcxproj  parserfp.cpp  prototyp.h
pnglib/: CMakeLists.txt  PNGLib.vcproj  PNGLib.vcxproj  png.c  png.h  pngset.c  pngtest.c  pngwrite.c
qdlib/: CMakeLists.txt  FractalAbort.h  QDLib.vcxproj  dd_real.h  dd_routines.cpp  inline.h  qd_config.h  qd_inline.h  qd_real.h  qd_routines.cpp
